# For-Project

./: Makefile  Makefile.py  README.md  pyproject.toml
my-venv/: pyvenv.cfg
project_func/: cli.py
project_func/scripts/: main_base.py
