[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "project_func" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "project_func.scripts.main_base:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
